# ProgrammingC_1_sibsutis

./: README.md  lab4
*/: tinkoff.c
dop/: ulitka.c
lab1/: 1_1.c  1_3.c
lab10/: MakeFile  Triangle.c  dop.c  dop.h  proto10_1.c
lab11/: 11_1.c  11_2.c  11_3.c  11_4.c
lab12/12_1/: Makefile
lab12/12_1/background/: background.h
lab12/12_1/pipes/: pipes.h  write_pipe.c
lab12/12_2/: CMakeLists.txt
lab12/12_2/background/: background.c
lab12/12_2/pipes/: read_pipe.c
lab12/12_2/src/: main.c
lab12/12_3/: 12_3.txt
lab2/: 2_1.c  2_2.c  2_3.c  2_5.c
lab3/: 3_1.c  3_2.c  3_3.c  3_4.c  3_5.c
lab4/: 4_1.c  4_2(extended).c  4_2.c
lab5/: 5_1(pro version).c  5_1.c  5_2.c
lab6/: 6_1.c  6_2.с
lab7/: 7_1.c
lab8/: 8_1.c
lab9/: 9_1.c  proto2.c  proto9_1.c
